fixed z-index of fixed title bar being higher than the search overlay
also:
- fixed documents autolinking to themselves

--- a/poxy/data/poxy.css
+++ b/poxy/data/poxy.css
@@ -17,7 +17,7 @@ body > header
 	top: 0;
 	left: 0;
 	right: 0;
-	z-index: 100;
+	z-index: 5;
 }
 
 body > main
